# course_work

./: .gitignore  TODO.md  copy.sh  pyproject.toml
results/: depth_stress_test.json  gradient_flow_init.json
results_pkl/: mnist_no_skip_L10_W128_lr0.001_epochs3_seed42.pkl  mnist_random_skip_L10_W128_lr0.001_epochs3_seed42.pkl  mnist_standard_L10_W128_lr0.001_epochs3_seed42.pkl
src/: analyze_complexity.py  analyze_rnn_diagnostics.py  train_adding.py  train_mnist.py
test_results_rnn/: adding_alternating_L2_W16_seq100_seed42.pkl  adding_alternating_L2_W16_seq10_seed42.pkl  adding_alternating_L2_W16_seq500_seed42.pkl  adding_random_balanced_L2_W16_seq10000_seed42.pkl  adding_random_balanced_L2_W16_seq1000_scale0.7970_seed42.pkl  adding_random_balanced_L2_W16_seq1000_scale0.7990_seed42.pkl  adding_random_balanced_L2_W16_seq1000_scale1.0128_seed42.pkl  adding_random_balanced_L2_W16_seq1000_seed42.pkl  adding_random_balanced_L2_W16_seq100_seed42.pkl  adding_random_balanced_L2_W16_seq10_seed42.pkl  adding_random_balanced_L2_W16_seq2000_seed42.pkl  adding_random_balanced_L2_W16_seq40_seed42.pkl  adding_random_balanced_L2_W16_seq5000_seed42.pkl  adding_random_balanced_L2_W16_seq500_seed42.pkl  adding_random_balanced_L2_W32_seq500_seed42.pkl  adding_random_balanced_L2_W64_seq1000_seed42.pkl  adding_random_balanced_L2_W64_seq500_seed42.pkl  adding_random_balanced_L8_W64_seq10000_seed42.pkl  adding_random_balanced_L8_W64_seq100_seed42.pkl  adding_random_uniform_L2_W16_seq100_seed42.pkl  adding_random_uniform_L2_W16_seq10_seed42.pkl  adding_random_uniform_L2_W16_seq500_seed42.pkl  adding_spatial_L2_W16_seq100_seed42.pkl  adding_spatial_L2_W16_seq10_seed42.pkl  adding_spatial_L2_W16_seq500_seed42.pkl  (+6 more)
(+22 files in other folders)
