[project]
name = "course-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.1",
    "jaxlib>=0.10.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optax>=0.2.8",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
